# newsletter

./: README.md  main.py  pyproject.toml
src/newsletter/: audio.py  clients.py  config.py  digest.py  fetcher.py  summarizer.py
