[project]
name = "newsletter"
version = "0.1.0"
description = "Daily tech newsletter fetcher, summarizer, and audio generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "click>=8.1.8",
    "feedparser>=6.0.12",
    "gtts>=2.5.4",
    "langchain>=1.0.5",
    "langchain-google-genai>=3.0.2",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
]

[project.scripts]
newsletter = "main:main"
